--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+  margin: 0;
+  padding: 0;
+  font-family: Helvetica, sans-serif;
+  box-sizing: border-box;
+}
+
+
+body {
+  padding-bottom: 100px;
+}
+
+.class {
+  border: 1px solid red;
+  padding: 1em;
+  margin-bottom: 1em;
+}
